se arreglo el inicio

--- a/styles/style.css
+++ b/styles/style.css
@@ -21,7 +21,7 @@ section{
 .section-home{
   position: relative;
   min-height: 100vh;
-  background: url(../images/logo-small.png)no-repeat;
+  background: url(../images/logo-cell.png)no-repeat;
   background-size: cover;
   background-position: center;
   display: flex;
