--- a/styles/style.css
+++ b/styles/style.css
@@ -64,7 +64,7 @@ li{
   color: #fff;
   font-size: 30px;
   font-weight: 700;
-  max-width: 85%;
+  
   padding-top: 55px;
   padding-bottom: 12px;
   border-bottom: 1.5px solid white;
@@ -376,11 +376,18 @@ header.sticky .menu-item .sub-menu{
   margin-bottom: 20px;
 }
 
+.us__info h3,
+.us__info h4,
+.us__info p{
+  
+  text-align: justify;
+  color: white;
+} 
 @media(min-width:768px){
   .us{
     display: grid;
     grid-template-columns: 2.8fr 1.9fr;
-    column-gap: 10px;
+    column-gap: 40px;
   }
   .us__image img{
     max-width: 100%;
@@ -392,10 +399,10 @@ header.sticky .menu-item .sub-menu{
   .us__info h3,
   .us__info h4,
   .us__info p{
-  max-width: 85%;
+  max-width: 97%;
   text-align: justify;
   color: white;
-}
+  } 
 }
 
 
@@ -439,7 +446,6 @@ header.sticky .menu-item .sub-menu{
   margin: 0 auto;
   font-size: 27px;
   text-align: center;
-
 }
 
 
