--- a/styles/style.css
+++ b/styles/style.css
@@ -546,6 +546,9 @@ header.sticky .menu-item .sub-menu{
   line-height: 1.5;
   border-bottom: 1px solid white;
 }
+.materials h3{
+  padding-top:25px
+}
 
 .materials:last-of-type{
   margin-bottom: 80px;
